Bug 543649 - [12] Produce preview-feature warnings for Switch expression
Change-Id: I0420f05708ff7bd8eedc116bf3a8aa990fb492c6
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>